--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -5,6 +5,6 @@
 <div id="existing_users">
   <h2> Existing Users and Their Dashboards </h2>
   <%@users.each do |user|%>
-  <p><%=user.name%> <%=link_to "#{user.name}'s Dashboard", "/users/#{user.id}/dashboard"%> </p>
+  <p><%=user.name%> <%=link_to "#{user.name}'s Dashboard", "/users/#{user.id}"%> </p>
   <%end%>
 </div>
