adds viewing party details to user dashboard

--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -3,3 +3,9 @@
 <%= button_to "Discover Movies" %>
 
 <%= "#{@user.name}'s Viewing Parties" %>
+<% @viewing_parties.each do |party| %>
+  <%= "Movie: #{party.movie_id}" %>
+  <%= "Duration: #{party.duration}" %>
+  <%= "Date: #{party.date}" %>
+  <%= "Time: #{party.time}" %>
+<% end %>
