Adds refactor: change button to be more in line with wire

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Viewing Party Lite</h1>
 
-<%=button_to "Create New User", "/register" %><br>
+<%=button_to "Create a New User", "/register" %><br>
 
 <section class="users">
   <h3>Existing Users</h3>
