feature: Create landing#index view and write html / Completes Landing Page ticket Co-authored-by: C-V-L

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <div id="nav_bar">
+      <%= link_to "Home", root_path %>
+    </div>
     <%= yield %>
   </body>
 </html>
