Adds discover path and testing

--- a/app/views/user/dashboard.html.erb
+++ b/app/views/user/dashboard.html.erb
@@ -1,6 +1,6 @@
 <%= "#{@user.name}'s Dashboard" %>
 
-<%= button_to "Discover Movies" %>
+<%= button_to "Discover Movies", discover_user_path, method: :get %>
 
 <%= "#{@user.name}'s Viewing Parties" %>
 <% @viewing_parties.each do |party| %>
