--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="top-container">
+        <h1 style="text-align:center; background-color:#EBEFF3;">Viewing Party</h1>
+        <%= link_to "Home", root_path %>
+        <% flash.each do |type, notice| %>
+          <h3 style="color: #800080;"><b><%= notice %></b></h3>
+        <% end %>
+
+      <%= yield %>
+    </div>
   </body>
 </html>
