Add refactor: modified button to hit proper method

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= "#{@user.name}'s "%>Dashboard</h2>
 
-<%= button_to "Discover Movies", "/users/#{@user.id}/discover" %>
+<%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
 
 <section class = "viewing_parties">
   <ul>
