--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,15 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
+    <% flash.each do |type, msg| %>
+      <div id="flash_message">
+        <%= msg %>
+      </div>
+    <% end %>
+    
+    <p><%= link_to "Home", root_path %></p>
+    <p>Welcome to Viewing Party!</p>
     <%= yield %>
   </body>
 </html>
