--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,14 +4,14 @@
 
 <button type="button">Create New User</button>
 
-<%# <body> %>
-  <%# <div class="row"> %>
-    <%# <p class='col-12'>Existing Users</p> %>
-  <%# </div> %>
-  <%# <% @users.each do |user| %> 
-    <%# <li><%= link_to "User ##{user.name}", user_path(user)</li>  %> 
-  <%# <% end %> 
- <%# </body>  %>
+ <body>
+  <div class="row">
+    <p class='col-12'>Existing Users</p> 
+  </div> 
+  <% @users.each do |user| %> 
+    <li><%= link_to "User ##{user.name}", user_path(user)%></li> 
+  <% end %>
+ </body> 
 
 
 
