feat: create welcome page view. welcome page controller and welcome#index.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,11 @@
   </head>
 
   <body>
+  <div class="links">
+    <nav>
+      <%= link_to "Home Page", "/" %>
+    </nav>
+  </div>
     <%= yield %>
   </body>
 </html>
