--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,10 +2,10 @@
 
 <div id = "new_user">
   <%= form_with model: @user, local: true do |f| %>
-    <%= f.label :name, "Name" %>
-    <%= f.text_field :name %>
-    <%= f.label :email, "Email" %>
-    <%= f.text_field :email %>
+    <%= f.label :name, "Name:" %>
+    <%= f.text_field :name %><br><br>
+    <%= f.label :email, "Email:" %>
+    <%= f.text_field :email %><br><br>
     <%= f.submit "Create New User" %>
   <% end %>
 </div>
