--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+		<% flash.each do |type, msg| %>
+			<h3><b><%= msg %></b></h3>
+		<% end %>
     <%= yield %>
   </body>
 </html>
