--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <br>
 <%= button_to "Discover Movies", "/users/#{@user.id}/discover", method: :get %>
 <br>
-<% @user_all_parites.each do |party| %>
+<% @user_all_parties.each do |party| %>
   <p><%= party.date.strftime("%B %-d, %Y") %></p>
   <p><%= party.start_time.strftime("%I:%M %p") %></p>
   <% if @user.id == party.host_id %>
