feat: add error messages to layouts. update path on button in welcome#index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,15 @@
   <body>
   <div class="links">
     <nav>
-      <%= link_to "Home Page", "/" %>
+      <%= link_to "Home Page", root_path %>
     </nav>
   </div>
+    <% flash.each do |type, msg| %>
+      <div>
+        <%= msg %>
+      </div>
+      <%end%>
+    </div>
     <%= yield %>
   </body>
 </html>
