--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Viewing Party Lite</h1>
 
 <div class = "new_user">
-  <%= button_to "Create New User", "/register", method: :get %>
+  <%= button_to "Register New User", register_path, method: :get %>
 </div>
 
 <div class = "existing_users">
