fix: party not showing on page
Co-authored-by: Elle Majors <hellolovely@ellemajors.com>
Co-authored-by: Axel De La Guardia <axeldelaguardia@gmail.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
         <p>Upcoming Parties</p>
         <ul>
           <% @parties.each do |party| %>
-            <li><%= link_to "Party ##{party.movie_title}", party_path(party)%></li>
+            <li><%= link_to "Party ##{party.id}", party_path(party)%></li>
           <% end %>
         </ul>
       </div>
