feat: add route and have discover movies button take user to user_discover_index_path
Co-authored-by: Elle Majors <hellolovely@ellemajors.com>
Co-authored-by: Axel De La Guardia <axeldelaguardia@gmail.com>

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 
   <p class= "title has-test_centered"><%= @user.name %>'s Dashboard</p>
 
-  <button type="button">Discover Movies</button>
+	<%= button_to "Discover Movies", user_discover_index_path(@user) %>
 
   <section class="section">
     <p class="title">Viewing Parties</p>
