--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,6 +1,6 @@
 <%= "#{@user.name}'s Dashboard" %>
 
-<%= button_to "Discover Movies", discover_user_path, method: :get %>
+<%= button_to "Discover Movies", user_discover_path(@user), method: :get %>
 
 <%= "#{@user.name}'s Viewing Parties" %>
 <% @viewing_parties.each do |party| %>
