--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @user.name %>'s Dashboard </h2>
 
-<p><%= button_to "Discover Movies", discover_user_path(@user), method: :get %></p>
+<p><%= button_to "Discover Movies", user_discover_index_path(@user), method: :get %></p>
 
 <section class="view_parties_container">
 </section>
