Landing page akh (#18)
* Add: x86_64-linux to Gemfile.lock

* Add: landing page features, universal header and nav in application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,12 @@
   </head>
 
   <body>
+    <header id="title">
+      <h1>Viewing Party</h1>
+    </header>
+    <nav id="navigation">
+      <%= link_to "Home", root_path  %>
+    </nav>
     <%= yield %>
   </body>
 </html>
