User registration page (#19)
* Add: x86_64-linux to Gemfile.lock

* Add: landing page features, universal header and nav in application layout

* Add: tests for navigating from landing to registration, next is to build form

* Add: front-end validations for user registration

* Add: registering a user functionality

* Add: validation for email strict_mx and uniqueness

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,11 @@
 <body>
-  <section id="user_interface">
+  <section id="existing_users">
     <h3>Existing Users</h3>
-      <%= button_to "Create A New User", "/register" %>
+      <p><%= button_to "Create A New User", register_path, method: :get %></p>
       <% @users.each do |user| %>
         <div id="user-<%= user.id %>">
-          <%= link_to "#{user.email}", "/users/#{user.id}" %>
+          </p><%= link_to "#{user.email}", "/users/#{user.id}" %></p>
         </div>
       <% end %>
-
   </section>
 </body>
