--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,12 +26,18 @@
   </head>
 
   <body>
+    <% flash.each do |type, notice| %>
+      <h3><b><%= notice %></b></h3>
+    <% end %>
+    
     <header id="title">
       <h1>Viewing Party</h1>
     </header>
+    
     <nav id="navigation">
       <%= link_to "Home", root_path  %>
     </nav>
+    
     <%= yield %>
   </body>
 </html>
