--- a/app/views/users/discover.html.erb
+++ b/app/views/users/discover.html.erb
@@ -1,1 +1,11 @@
 <h1>DISCOVER!</h1>
+
+<%= button_to "Top Rated Movies", "/users/#{@user.id}/movies", method: :get, params: {top_rated_search: true} %><br>
+
+<div class="search_movie_title">
+  <%= form_with url: "/users/#{@user.id}/movies", method: :get, local: true do |form| %>
+    <%= form.label :search %>
+    <%= form.text_field :search %>
+    <%= form.submit "Search by Movie Title" %>
+  <% end %>
+</div>
