--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @user.name%>'s Dashboard</h1>
 
-<%=link_to "Discover Movies", "/users/#{@user.id}/discover"%>
+<%=link_to "Discover Movies", user_discover_index_path(@user.id)%>
 <h4>Lists of viewing parties</h4>
