--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -2,7 +2,7 @@
 
 <%= button_to "Discover Top Rated Movies", user_movies_path(@user), method: :get %>
 
-<%= form_with url: user_movies_path(@user), method: :post, local: true do |f| %>
+<%= form_with url: user_movies_path(@user), method: :get, local: true do |f| %>
 	<%= f.label :movie_title, "Movie Title" %>
 	<%= f.text_field :movie_title %> 
   <%= f.submit "Search" %>
