Add html to movies index view

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,9 @@
 
-<h2>Top Rated Movies</h2>
+<h2>Movie Results</h2>
 
-<%= button_to "Discover Page", user_discover_index_path(@user), local: true %>
+<%= button_to "Discover Page", user_discover_index_path(@user), method: :get, local: true %>
 
-<% @top_rated_movies.each do |movie| %>
+<% @movies.each do |movie| %>
   <h3>Title: <%= link_to "#{movie.title}", local: true %></h3>
   <p>Vote Average: <%= movie.vote_average %></p>
 <% end %>
