CO-AUTHORED-BY: Conner V <cdvanloan@gmail.com> tests: Add tests for movies/index

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,7 @@
 <% @movies.each do |movie| %>
-  <%= movie.title %><br>
-  <%= movie.vote_average %>
-  <br><br>
+  <ul class="movie">
+    <%= movie.title %><br>
+    <%= movie.vote_average %>
+    <br><br>
+  </ul>
 <% end %>
