--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 		<% flash.each do |type, msg| %>
 			<h3><b><%= msg %></b></h3>
 		<% end %>
+    <%= render "welcome/welcome_page_nav" %>
     <%= yield %>
   </body>
 </html>
