--- a/app/views/users/movies/index.html.erb
+++ b/app/views/users/movies/index.html.erb
@@ -1,9 +1,15 @@
-<% if ?? %>
+<% if @search_result_movies %>
   <body>
     <center><h3>Movie Results for: <%= @keyword %></h3></center>
-    <br>
     <center><%= button_to "Discover Page", "/users/#{@user.id}/discover", method: :get %></center>
+    <% @search_result_movies.each do |movie| %>
+      <div id="top-<%= movie.movie_id %>">
+        <p><%= movie.title %></p>
+        <p>Vote Average: <%= movie.vote_avg %></p>
+      </div>
+    <% end %>
     <br>
+
   </body>
 
 <% else %>
@@ -11,6 +17,12 @@
     <center><h3>Top Rated Movies</h3></center>
     <br>
     <center><%= button_to "Discover Page", "/users/#{@user.id}/discover", method: :get %></center>
+    <% @top_20_movies.each do |movie| %>
+      <div id="top-<%= movie.movie_id %>">
+        <p><%= movie.title %></p>
+        <p>Vote Average: <%= movie.vote_avg %></p>
+      </div>
+    <% end %>
     <br>
   </body>
 <% end %>
