--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -1,9 +1,22 @@
 
 <%if @movie.name %>
   <div id ="movie_title">
-    <p>"Movie Title" <%=@movie.name%> </p>
+    <h1>"Movie Title" <%=@movie.name%> </h1>
   </div>
 <%end%>
+
+<div id="viewing_party_form">
+<%= form_with url: "/users/#{@user.id}/movies/#{@movie.movie_id}/parties", method: "post" do |form| %>
+  <%= form.label :duration, "Party duration (in minutes):" %>
+  <%= form.number_field :duration, value: @movie.raw_runtime.to_i, required: true %>
+  <br>
+
+  <%= form.label :date, "Proposed Date:" %>
+  <%= form.date_field :event_date, required: true %>
+
+  <%= form.submit "Create Party" %>
+<% end %>
+</div>
 
 <%if @movie.vote_average%>
   <div id ="vote_average">
