--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -6,13 +6,22 @@
 <%end%>
 
 <div id="viewing_party_form">
-<%= form_with url: "/users/#{@user.id}/movies/#{@movie.movie_id}/parties", method: "post" do |form| %>
+<%= form_with url: "/users/#{@user.id}/movies/#{@movie.movie_id}/parties", method: "post", local: true do |form| %>
   <%= form.label :duration, "Party duration (in minutes):" %>
   <%= form.number_field :duration, value: @movie.raw_runtime.to_i, required: true %>
   <br>
 
   <%= form.label :date, "Proposed Date:" %>
   <%= form.date_field :event_date, required: true %>
+  <br>
+  <%= form.label :time, "Proposed Start Time:" %>
+  <%= form.time_field :time_field, required: true %>
+  <br>
+    <%@all_users.each do |user|%>
+      <div id=<%=user.name%>>
+      Check to invite to viewing party <%=user.name%>  <%= form.check_box :invite %>
+      </div>
+    <%end%>
 
   <%= form.submit "Create Party" %>
 <% end %>
