fix: delete commented out pry and change button path

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Viewing Party</h1>
 
-<button type="button">Create New User</button>
+<%= button_to "Create New User", register_path, method: :get %>
 
  <body>
   <div class="row">
