--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -4,6 +4,6 @@
 <%= button_to "Discover Page", user_discover_index_path(@user), method: :get, local: true %>
 
 <% @movies.each do |movie| %>
-  <h3>Title: <%= link_to "#{movie.title}", local: true %></h3>
+  <h3>Title: <%= link_to "#{movie.title}", user_movie_path(@user, id: movie.movie_id), method: :get, local: true %></h3>
   <p>Vote Average: <%= movie.vote_average %></p>
 <% end %>
