--- a/app/views/user_discovers/index.html.erb
+++ b/app/views/user_discovers/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Discover Movies</h1>
 
-<%= button_to "Discover Top Rated Movies", "/users/#{@user.id}/movies", params: {q: 'top rated'}, method: :get %>
-
+<div id="top_movies">
+  <%= button_to "Discover Top Rated Movies", "/users/#{@user.id}/movies", params: {q: 'top_rated'}, method: :get %>
+</div>
 <div id="search_movies">
 <%= form_tag("/users/#{@user.id}/movies", method: :get) do %>
   <%= text_field_tag(:search, params[:search]) %>
   <%= submit_tag ("Find Movies") %>
 <% end %>
+</div>
