--- a/app/views/user_movies/index.html.erb
+++ b/app/views/user_movies/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Back", "/users/#{@user.id}/discover" %>
+
 <h1>Top Rated Movies</h1>
 <% if @top_movies %>
   <% @top_movies.each.with_index(1) do |movie, index| %>
