create movies index spec and pass tests for User Story 10
Co-authored-by: Bobby Luly <bobbyluly@gmail.com>

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,11 +1,13 @@
+<%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
+
 <ol>
   <% if params[:top_rated] %>
     <% @movies.top_rated.each do |movie| %>
-      <li><%= movie.title %> <%= movie.vote_average %></li>
+      <li><%= link_to movie.title, "/users/#{@user.id}/movies/#{movie.id}" %> - Vote Average: <%= movie.vote_average %></li>
     <% end %>
   <% elsif params[:search] %>
     <% @movies.search(params[:search]).each do |movie| %>
-      <li><%= movie.title %> <%= movie.vote_average %></li>
+      <li><%= link_to movie.title, "/users/#{@user.id}/movies/#{movie.id}" %> - Vote Average: <%= movie.vote_average %></li>
     <% end %>
   <% end %>
 </ol>
