--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,14 @@
   </head>
 
   <body>
-    <%= link_to "Landing Page", "/" %>
   <% flash.each do |type, msg| %>
       <div>
         <%= msg %>
       </div>
     <% end %>
+    <%= link_to "Landing Page", "/" %>
+      <h1>Viewing Party</h1>
+      <br>
     <%= yield %>
   </body>
 </html>
