--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
     <p class='col-12'>Search Results</p> 
   </div> 
   <% @movies.each do |movie| %> 
-    <li><%= link_to "Movie ##{movie.title}", user_movie_path(@user, movie) %>
+    <li><%= link_to "Movie: #{movie.title}", user_movie_path(@user, movie.id) %>
     <p>Vote Average: <%= movie.vote_average %></p>
     </li> 
   <% end %>
