CO-AUTHORED-BY: Harrison <hwryan12@gmail.com> Rewrites facade to use instance methods, adds new poros, tests

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,5 +1,5 @@
-<% @movies.each do |movie| %>
-  <%= movie.title %><br>
+<% @facade.movies.each do |movie| %>
+  <%= link_to "#{movie.title}", user_movie_path(@user, movie.id) %><br>
   <%= movie.vote_average %>
   <br><br>
 <% end %>
