--- a/app/views/discover/index.html.erb
+++ b/app/views/discover/index.html.erb
@@ -1,6 +1,9 @@
-<%= button_to "Top Rated Movies", user_movies_path(params: {q: "top rated"}), method: :get %>
-
-<%= form_with url: user_movies_path, method: :get, local: true do |form| %>
+<%= form_with url: user_movies_path(@user), method: :get, local: true do |form| %>
+  <%= form.hidden_field :keyword, value: "top rated" %>
+  <%= form.submit 'Top Rated Movies' %>
+<% end %>
+  
+<%= form_with url: user_movies_path(@user), method: :get, local: true do |form| %>
   <%= form.label :keyword, 'Search For Movies by Title:' %>
   <%= form.text_field :keyword %>
   <%= form.submit 'Search' %>
