Refactor: adjust endpoint routes in movie service. Add line break in movie index view

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Discover Page", user_discover_index_path(@user), method: :get %>
+<%= button_to "Discover Page", user_discover_index_path(@user), method: :get %><b>
 
 <ol>
   <% if params[:top_rated] %>
