add: movie show page and api consumption

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,7 @@
     <p class='col-12'>Existing Users</p> 
   </div> 
   <% @users.each do |user| %> 
-    <li><%= link_to "User ##{user.name}", user_path(user)%></li> 
+    <li><%= link_to "#{user.name}", user_path(user)%></li> 
   <% end %>
  </body> 
 
