--- a/app/views/user_movies/index.html.erb
+++ b/app/views/user_movies/index.html.erb
@@ -2,18 +2,18 @@
 
 <h1>Top Rated Movies</h1>
 <% if @top_movies %>
-  <% @top_movies.each.with_index(1) do |movie, index| %>
+  <% @top_movies.each.with_index(1) do |film, index| %>
     <div id="top_rated-<%= index %>">
-      <p><%= movie.title %></p>
-      <p><%= movie.vote_average %></p>
+      <p><%= link_to "#{film.title}", "/users/#{@user.id}/movies/#{film.id}" %></p>
+      <p><%= film.vote_average %></p>
     </div>
   <% end %>
 <% end %>
 <% if @search_results %>
-  <% @search_results.each.with_index(1) do |movie, index| %>
+  <% @search_results.each.with_index(1) do |film, index| %>
     <div id="search_results-<%= index %>">
-      <p><%= movie.title %></p>
-      <p><%= movie.vote_average %></p>
+      <p><%= link_to "#{film.title}", "/users/#{@user.id}/movies/#{film.id}"%></p>
+      <p><%= film.vote_average %></p>
     </div>
   <% end %>
 <% end %>
