Add facade methods to handle combining calls for the cast and review data
Co-authored-by: Caleb Thomas <104170346+cjthomas00@users.noreply.github.com>

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,3 +2,11 @@
 <%= button_to "Create Viewing Party", new_user_movie_viewing_party_path(@facade.user, @facade.movie), method: :get%>
 
 <%=button_to "Return to Discover Page", user_movies_discover_path(@facade.user)%>
+
+<div id="movie-info">
+  <h3>Movie Information</h3>
+  <p>Movie Title: <%=@facade.movie.title%></p>
+  <p>Movie Vote Average: <%=@facade.movie.vote_average%></p>
+  <p>Movie Run-Time: <%=@facade.movie.runtime/60%> hours and <%=@facade.movie.runtime%60%> minutes</p>
+  <p>Movie Title: <%=@facade.movie.genres.each {|genre| genre}%></p>
+  <p>Movie Summary: <%=@facade.movie.summary%></p>
