--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to "Back", "/users/#{@user.id}/discover" %>
 <%= button_to "Create Viewing Party", "/users/#{@user.id}/movies/#{@movie.id}/viewing_party/new" %>
-<p>Title: <%= @movie.title %></p>
+<h2>Title: <%= @movie.title %></h2>
 <p>Vote Average: <%= @movie.vote_average %></p>
 <p>Run Time: <%= @movie.runtime %></p>
 <p>Summary: <%= @movie.summary %></p>
@@ -8,3 +8,9 @@
 <p>Genres: <% @movie.genres.each do |genre| %>
   <%= genre[:name] %>
 <% end %></p>
+<h3>Cast</h3>
+<div id="actors">
+  <% @actors.each do |actor| %>
+      <p><%= actor.name %></p>
+  <% end %>
+</div>
