last api user story complete

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -14,3 +14,12 @@
       <p><%= actor.name %></p>
   <% end %>
 </div>
+<h3>Reviews</h3>
+<div id="reviews">
+  <% @reviews.each do |review| %>
+    <p>Author: <%= review.author %></p>
+    <p><%= review.content %></p>
+    <p>Rating: <%= review.rating %></p>
+  <% end %>
+  <p>Total Reviews: <%= @reviews.count %></p>
+</div>
