--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,5 @@
-<%= button_to "Discover Movies", user_discover_index_path(@user.id), local: true %>
+<%= button_to "Discover Movies", user_discover_index_path(@user), method: :get, local: true %>
 
-<%= button_to "Create Viewing Party", new_user_movie_viewing_party(@user.id, @movie.id), local: true %>
+<%= button_to "Create Viewing Party", new_user_movie_viewing_party_path(@user, @movie), local: true %>
 
-<%= @movie.movie_details %>
+<%= @movie.detailed_movie %>
