--- a/app/views/parties/new.html.erb
+++ b/app/views/parties/new.html.erb
@@ -7,19 +7,22 @@
 
 <div id="viewing_party_form">
 <%= form_with url: "/users/#{@user.id}/movies/#{@movie.movie_id}/parties", method: "post", local: true do |form| %>
+  <%= form.label :name, "Name:" %>
+  <%= form.number_field :name, required: true %>
+
   <%= form.label :duration, "Party duration (in minutes):" %>
   <%= form.number_field :duration, value: @movie.raw_runtime.to_i, required: true %>
   <br>
 
   <%= form.label :date, "Proposed Date:" %>
-  <%= form.date_field :event_date, required: true %>
+  <%= form.date_field :party_date, required: true %>
   <br>
   <%= form.label :time, "Proposed Start Time:" %>
-  <%= form.time_field :time_field, required: true %>
+  <%= form.time_field :party_time, required: true %>
   <br>
     <%@all_users.each do |user|%>
       <div id=<%=user.name%>>
-      Check to invite to viewing party <%=user.name%>  <%= form.check_box :invite %>
+      Check to invite to viewing party <%=user.name%>  <%= form.check_box "invites", {multiple: true}, user.id, nil %>
       </div>
     <%end%>
 
