--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -14,7 +14,7 @@
   <div id="cast-info">
     <h4>Cast: </h4>
     <% @facade.movie_cast.each do |member|%>
-    <p>Starring: <%=member[:name]%>,&nbspas: <%=member[:character]%></p>
+    <p>Starring: <%=member.name%>,&nbspas: <%=member.character%></p>
     <% end %>
       <%# CANT GET THIS WAY TO WORK! <% @facade.movie.cast.each do |member|%>
     <%# <p>Starring: <%=member.name,&nbsp as: <%=member.character%></p>
@@ -22,10 +22,10 @@
   </div>
   <br>
   <h4>Reviews</h4>
-  <p>Movie Review Count: <%=@facade.movie.reviews.count%></p>
-  <% @facade.movie.reviews.each do |review|%>
-    <p>Author: <%=review[:author]%></p>
-    <p>Review: <%=review[:content]%></p>
-    <p>Created at: <%=review[:created_at]%></p>
+  <p>Movie Review Count: <%=@facade.movie_reviews.count%></p>
+  <% @facade.movie_reviews.each do |review|%>
+    <p>Author: <%=review.author%></p>
+    <p>Review: <%=review.content%></p>
+    <p>Created at: <%=review.created_at%></p>
   <%end%>
 </div>
