CO-AUTHORED-BY: Conner VL <cdvanloan@gmail.com> feature: Adds flashes messages for user and party creation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,17 @@
   </head>
 
   <body>
+    <h1><span>Viewing Party</span></h1>
+
     <div id="nav_bar">
       <%= link_to "Home", root_path %>
     </div>
+
+    <% flash.each do |type, msg| %>
+      <div id="flash_message">
+        <%= msg %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
