--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,4 +1,4 @@
-<p><%= button_to "Create Viewing Party", new_user_movie_party_path(@user, @movie.id), method: :get %></p>
+<p><%= button_to "Create Viewing Party", new_user_movie_party_path(@user, @movie.id), params: {title: @movie.title, runtime: @movie.runtime}, method: :get %></p>
 
 <p><%= button_to "Return to Discover Page", user_discover_index_path(@user), method: :get %></p>
 
