Feat: add review extraction methods to the movie service and facade. add instance variables to show action in movies controller to access in movie details show view
Co-authored-by: Chris Crane <chrisjcrane@gmail.com>

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,27 +1,33 @@
-<h2><%= @movie.title %></h2>
+<h2><%= @movie_facade.movie.title %></h2>
 
 <%= button_to "Discover Page", user_discover_index_path(@user), method: :get %><br>
 
-<%= button_to "Create Viewing Party for #{@movie.title}", "/users/#{@user.id}/movies/#{@movie.id}/viewing_party/new", method: :get %><br>
+<%= button_to "Create Viewing Party for #{@movie_facade.movie.title}", "/users/#{@user.id}/movies/#{@movie_facade.movie.id}/viewing_party/new", method: :get %><br>
 
 <section id = "movie_info">
   
-  <p><strong>Vote:</strong> <%= @movie.vote_average %></p>
+  <p><strong>Vote:</strong> <%= @movie_facade.movie.vote_average %></p>
 
-  <p><strong>Runtime:</strong> <%= @movie.runtime %>min 
+  <p><strong>Runtime:</strong> <%= "#{@movie_facade.movie.runtime/60}h #{@movie_facade.movie.runtime % 60}min"%>
 
   <p>
-  <strong>Genre(s):</strong> <% genre_names = @movie.genres.map { |genre| genre[:name] }%>
+  <strong>Genre(s):</strong> <% genre_names = @movie_facade.movie.genres.map { |genre| genre[:name] }%>
   <%= genre_names.join(", ") %><br><br>
   </p>
 
   <h3>Summary:</h3>
-  <%= @movie.overview %>
+  <%= @movie_facade.movie.overview %>
 
   <h3>Cast:</h3>
   <ul>
-    <% @cast.each do |member| %>
+    <% @movie_facade.cast.each do |member| %>
       <li><%= member[:name] %> - "<%= member[:character] %>"</li>
     <% end %>
   </ul>
+
+  <h3><%= @movie_facade.reviews.count %> Reviews</h3>
+  <% @movie_facade.reviews.each do |review| %>
+    <strong><%= review[:author] %>:</strong>
+    <%= review[:content] %><br><br>
+  <% end %>
 </section>
