--- a/app/views/viewing_party/new.html.erb
+++ b/app/views/viewing_party/new.html.erb
@@ -1,1 +1,14 @@
 <h1>Create a New Viewing Party for <%=@facade.movie.title%></h1>
+<%=form_with model: @facade.new_viewing_party, local: true, url: user_movie_viewing_party_index_path(@facade.user, @facade.movie) do |form|%>
+  <%=form.label :duration%>
+  <%=form.text_field :duration, value:@facade.movie.runtime %>
+
+  <p>Party Date: <%=form.date_select("date", start_year: Date.today.year, date_separator: "-")%>
+  <p>Start Time: <%=form.time_select("start_time")%>
+  <br>
+  <br>
+  <%=form.label "#{@facade.user.name}"%>
+  <%=form.check_box "#{@facade.user.name}" %>
+
+
+<%end%>
