add: form for new viewing party

--- a/app/views/viewing_parties/new.html.erb
+++ b/app/views/viewing_parties/new.html.erb
@@ -1,16 +1,17 @@
 <h1><%= @movie.title %></h1>
-
-<%= form_with url: "/users/#{@user.id}/movies/#{@movie.id}/viewing_parties/", method: :post do |f| %>
-  <%= f.label :duration, "Duration of Party" %>
-  <%= f.number_field :duration, value: @movie.runtime %>
-  <%= f.label :date, "Date of Party" %>
-  <%= f.date_field :party_date, min: Date.today %>
-  <%= f.label :time, "Time of Party" %>
-  <%= f.time_field :party_time, min: Time.now.strftime("%H:%M") %>
-<br><br>
-  <%= f.label :check_boxes, "Invite Friends" %>
-  <%= f.collection_check_boxes :user_ids, @users, :id, :name%>
-  <%= f.hidden_field :host_id, value: @user.id %>
-  <%= f.hidden_field :movie_id, value: @movie.id %>
-  <%= f.submit "Create Viewing Party" %>
-<% end %>
+<div id="new_viewing_party">
+  <%= form_with url: "/users/#{@user.id}/movies/#{@movie.id}/viewing_parties/", method: :post do |f| %>
+    <%= f.label :duration, "Duration of Party" %>
+    <%= f.number_field :duration, value: @movie.runtime %>
+    <%= f.label :date, "Date of Party" %>
+    <%= f.date_field :party_date, min: Date.today %>
+    <%= f.label :time, "Time of Party" %>
+    <%= f.time_field :party_time, min: Time.now.strftime("%H:%M") %>
+  <br><br>
+    <%= f.label :check_boxes, "Invite Friends" %>
+    <%= f.collection_check_boxes :user_ids, @users, :id, :name%>
+    <%= f.hidden_field :host_id, value: @user.id %>
+    <%= f.hidden_field :movie_id, value: @movie.id %>
+    <%= f.submit "Create Party" %>
+  </div>
+  <% end %>
