--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,30 @@
 <%= "#{@user.name}'s Dashboard" %>
 
 <%= button_to "Discover Movies", user_discover_path(@user), method: :get %>
-
-<%= "#{@user.name}'s Viewing Parties" %>
-<br>
+<h2><%= "#{@user.name}'s Viewing Parties" %></h2>
+<div id="hosting">
 <% @viewing_parties.each do |party| %>
-  <%= "Movie: #{party.movie_id}" %>
-  <%= "Duration: #{party.duration}" %>
-  <%= "Date: #{party.date}" %>
-  <%= "Time: #{party.time}" %>
+  <% if party.host == @user %>
+    <p><strong>You are hosting this party:</strong></p>
+  <% else %>
+    <p><strong>Hosted by:</strong> <%= party.host %></p>
+  <% end %>
+</div>
+  <p><strong>Movie:</strong> <%= link_to "#{party.movie_title}", "/users/#{@user.id}/movies/#{party.movie_id}" %></p>
+  <%= image_tag "https://image.tmdb.org/t/p/w500#{@facade.movie_details.poster}" %>
+  
+  <p><strong>Date:</strong> <%= party.date %></p>
+  <p><strong>Time:</strong> <%= party.time %></p>
+  
+  <p><strong>Invited:</strong></p>
+  <ul id="invited">
+    <% @other_users.each do |attendee| %>
+      <% if attendee == @user %>
+        <li><strong><%= attendee.name %></strong></li>
+      <% else %>
+        <li><%= attendee.name %></li>
+      <% end %>
+    <% end %>
+  </ul>
   <br>
 <% end %>
