Add register path

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,6 +1,6 @@
 "Viewing Party Application (Andra and Hady)"
 
-<%= button_to "Create New User", "/users/new", method: :get %>
+<%= button_to "Create New User", "/register", method: :get %>
 
 <div id="existing_users">
   <h2> Existing Users and Their Dashboards </h2>
